<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout_product_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.benoit.shopify_summer2018mobile.ProductInfoActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height_product_info"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/image_product_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/product_image_description"
                android:scaleType="fitCenter"
                android:scaleX="-1"
                android:transitionName="@string/image_view_transition"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/user_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:titleTextColor="@android:color/white">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_product_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            card_view:cardCornerRadius="0dp"
            card_view:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/view_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/image_view_margins"
                        android:layout_marginStart="@dimen/image_view_margins"
                        android:layout_marginTop="@dimen/image_view_margins"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_title" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line_height"
                        android:layout_below="@id/text_description"
                        android:background="@color/colorLine" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/view_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_tags"
                        android:layout_width="@dimen/image_size"
                        android:layout_height="@dimen/image_size"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/image_view_margins"
                        android:layout_marginRight="@dimen/image_view_margins"
                        android:contentDescription="@string/tags_image_description"
                        android:src="@drawable/ic_style_black_40dp" />

                    <TextView
                        android:id="@+id/text_tags_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/image_view_margins"
                        android:layout_toEndOf="@+id/image_tags"
                        android:text="@string/info_tags"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_tags"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_tags_title"
                        android:layout_marginBottom="@dimen/image_view_margins"
                        android:layout_toEndOf="@+id/image_tags"
                        android:textColor="@color/colorSubtitle"
                        android:textSize="@dimen/text_subtitle" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line_height"
                        android:layout_below="@id/text_tags"
                        android:layout_marginEnd="@dimen/line_margin"
                        android:layout_toEndOf="@id/image_tags"
                        android:background="@color/colorLine" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/view_vendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_vendor"
                        android:layout_width="@dimen/image_size"
                        android:layout_height="@dimen/image_size"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/image_view_margins"
                        android:layout_marginRight="@dimen/image_view_margins"
                        android:contentDescription="@string/vendor_image_description"
                        android:src="@drawable/ic_domain_black_40dp" />

                    <TextView
                        android:id="@+id/text_vendor_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/image_view_margins"
                        android:layout_toEndOf="@+id/image_vendor"
                        android:text="@string/info_vendor"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_vendor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_vendor_title"
                        android:layout_marginBottom="@dimen/image_view_margins"
                        android:layout_toEndOf="@+id/image_vendor"
                        android:textColor="@color/colorSubtitle"
                        android:textSize="@dimen/text_subtitle" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line_height"
                        android:layout_below="@id/text_vendor"
                        android:layout_marginEnd="@dimen/line_margin"
                        android:layout_toEndOf="@id/image_vendor"
                        android:background="@color/colorLine" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/view_variants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_variants"
                        android:layout_width="@dimen/image_size"
                        android:layout_height="@dimen/image_size"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/image_view_margins"
                        android:layout_marginRight="@dimen/image_view_margins"
                        android:contentDescription="@string/variants_image_description"
                        android:src="@drawable/ic_color_lens_black_40dp" />

                    <TextView
                        android:id="@+id/text_variants_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/image_view_margins"
                        android:layout_toEndOf="@+id/image_variants"
                        android:text="@string/info_color"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_variants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_variants_title"
                        android:layout_marginBottom="@dimen/image_view_margins"
                        android:layout_toEndOf="@+id/image_variants"
                        android:textColor="@color/colorSubtitle"
                        android:textSize="@dimen/text_subtitle" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line_height"
                        android:layout_below="@id/text_variants"
                        android:layout_marginEnd="@dimen/line_margin"
                        android:layout_toEndOf="@+id/image_variants"
                        android:background="@color/colorLine" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/view_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_price"
                        android:layout_width="@dimen/image_size"
                        android:layout_height="@dimen/image_size"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/image_view_margins"
                        android:layout_marginRight="@dimen/image_view_margins"
                        android:contentDescription="@string/price_image_description"
                        android:src="@drawable/ic_attach_money_black_40dp" />

                    <TextView
                        android:id="@+id/text_price_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/image_view_margins"
                        android:layout_toEndOf="@+id/image_price"
                        android:text="@string/info_price"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_price_title"
                        android:layout_marginBottom="@dimen/image_view_margins"
                        android:layout_toEndOf="@+id/image_price"
                        android:textColor="@color/colorSubtitle"
                        android:textSize="@dimen/text_subtitle" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line_height"
                        android:layout_below="@id/text_price"
                        android:layout_marginEnd="@dimen/line_margin"
                        android:layout_toEndOf="@id/image_price"
                        android:background="@color/colorLine" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/view_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_quantity"
                        android:layout_width="@dimen/image_size"
                        android:layout_height="@dimen/image_size"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/image_view_margins"
                        android:layout_marginRight="@dimen/image_view_margins"
                        android:contentDescription="@string/quantity_image_description"
                        android:src="@drawable/ic_local_shipping_black_40dp" />

                    <TextView
                        android:id="@+id/text_quantity_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/image_view_margins"
                        android:layout_toEndOf="@+id/image_quantity"
                        android:text="@string/info_quantity"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_quantity_title"
                        android:layout_marginBottom="@dimen/image_view_margins"
                        android:layout_toEndOf="@+id/image_quantity"
                        android:textColor="@color/colorSubtitle"
                        android:textSize="@dimen/text_subtitle" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line_height"
                        android:layout_below="@id/text_quantity"
                        android:layout_marginEnd="@dimen/line_margin"
                        android:layout_toEndOf="@id/image_quantity"
                        android:background="@color/colorLine" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/view_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_weight"
                        android:layout_width="@dimen/image_size"
                        android:layout_height="@dimen/image_size"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/image_view_margins"
                        android:layout_marginRight="@dimen/image_view_margins"
                        android:contentDescription="@string/weight_image_description"
                        android:src="@drawable/ic_track_changes_black_40dp" />

                    <TextView
                        android:id="@+id/text_weight_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/image_view_margins"
                        android:layout_toEndOf="@+id/image_weight"
                        android:text="@string/info_weight"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_weight_title"
                        android:layout_marginBottom="@dimen/image_view_margins"
                        android:layout_toEndOf="@+id/image_weight"
                        android:textColor="@color/colorSubtitle"
                        android:textSize="@dimen/text_subtitle" />

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
